// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] layouts/<Main /> (administrator) should match snapshot 1`] = `
<div>
  <div
    class="Main__Container-q4q6nx-0 kSNCLj css-1usr1wh"
    style="height: 100vh;"
  >
    <div
      class="Main__Body-q4q6nx-1 bSllml css-1gmfemw"
    >
      <div
        class="Header__Container-sc-7cr55z-0 eHuDxq css-s3axrf"
      >
        <div
          class="Header__Brand-sc-7cr55z-1 knuMJV css-zkfaav"
        >
          <img
            alt="Code du travail numérique"
            aria-label="Bouton de retour au tableau de bord"
            class="Header__Logo-sc-7cr55z-2 kAIypM"
            src="/static/images/marianne.svg"
          />
          <div
            class="css-l3rx45"
          >
            <span
              class="Header__Title-sc-7cr55z-3 jGdlvq"
            >
              Code du travail numérique
            </span>
            <span
              class="Header__Subtitle-sc-7cr55z-4 kxPxIS"
            >
              Outil de contribution
            </span>
          </div>
        </div>
      </div>
      <div
        class="Main__Content-q4q6nx-2 iWRxVq css-l3rx45"
      />
    </div>
  </div>
</div>
`;

exports[`[Contrib] layouts/<Main /> (contributor) should match snapshot 1`] = `
<div>
  <div
    class="Main__Container-q4q6nx-0 kSNCLj css-1usr1wh"
    style="height: 100vh;"
  >
    <div
      class="Main__Body-q4q6nx-1 bSllml css-1gmfemw"
    >
      <div
        class="Header__Container-sc-7cr55z-0 eHuDxq css-s3axrf"
      >
        <div
          class="Header__Brand-sc-7cr55z-1 knuMJV css-zkfaav"
        >
          <img
            alt="Code du travail numérique"
            aria-label="Bouton de retour au tableau de bord"
            class="Header__Logo-sc-7cr55z-2 kAIypM"
            src="/static/images/marianne.svg"
          />
          <div
            class="css-l3rx45"
          >
            <span
              class="Header__Title-sc-7cr55z-3 jGdlvq"
            >
              Code du travail numérique
            </span>
            <span
              class="Header__Subtitle-sc-7cr55z-4 kxPxIS"
            >
              Outil de contribution
            </span>
          </div>
        </div>
      </div>
      <div
        class="Main__Content-q4q6nx-2 iWRxVq css-l3rx45"
      />
    </div>
  </div>
</div>
`;

exports[`[Contrib] layouts/<Main /> (contributor) should match snapshot with \`isHorizontal\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,10 @@
              </span>
            </div>
          </div>
        </div>
        <div
-         class=\\"Main__Content-q4q6nx-2 iWRxVq css-l3rx45\\"
+         class=\\"Main__Content-q4q6nx-2 iWRxVq css-1kw0tju\\"
        />
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`[Contrib] layouts/<Main /> (contributor) should match snapshot with \`isLoading\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -33,10 +33,23 @@
              </span>
            </div>
          </div>
        </div>
        <div
-         class=\\"Main__Content-q4q6nx-2 iWRxVq css-l3rx45\\"
+         class=\\"Main__Content-q4q6nx-2 iWRxVq css-1g1x2nw\\"
+       >
+         <div
+           class=\\"LoadingSpinner__Container-eu7nmw-0 dEMrTz\\"
+         >
+           <div
+             class=\\"LoadingSpinner__Spinner-eu7nmw-1 sHZX\\"
+             color=\\"#666666\\"
+           />
+           <div
+             class=\\"LoadingSpinner__Spinner-eu7nmw-1 LoadingSpinner__SpinnerNext-eu7nmw-2 daPQQA\\"
+             color=\\"#666666\\"
            />
+         </div>
+       </div>
      </div>
    </div>
  </DocumentFragment>"
`;
